fix mobile notification spacing for real this time

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -223,7 +223,7 @@ a:hover, a:focus {
 	}
 	.notification-message {
 		right: 0.5%;
-		top: 6%;
+		top: 8%;
 		margin-left: 30%;
 		position: absolute;
 		box-shadow: 2px 2px 2px grey;
